--- a/reports/AutomationReport.html
+++ b/reports/AutomationReport.html
@@ -35,7 +35,7 @@
 <a href="#"><span class="badge badge-primary">Automation Test Results</span></a>
 </li>
 <li class="m-r-10">
-<a href="#"><span class="badge badge-primary">Feb 14, 2025 08:34:52 am</span></a>
+<a href="#"><span class="badge badge-primary">Feb 14, 2025 06:46:53 pm</span></a>
 </li>
 </ul>
 </div>
@@ -81,7 +81,7 @@
           <div class="test-detail">
             <p class="name">sampleMethodForEmailEntering</p>
             <p class="text-sm">
-              <span>8:34:52 am</span> / <span>00:00:13:225</span>
+              <span>6:46:54 pm</span> / <span>00:00:27:081</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -90,9 +90,9 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">sampleMethodForEmailEntering</h5>
-<span class='badge badge-success'>02.14.2025 8:34:52 am</span>
-<span class='badge badge-danger'>02.14.2025 8:35:05 am</span>
-<span class='badge badge-default'>00:00:13:225</span>
+<span class='badge badge-success'>02.14.2025 6:46:54 pm</span>
+<span class='badge badge-danger'>02.14.2025 6:47:21 pm</span>
+<span class='badge badge-default'>00:00:27:081</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=1</span>
 <span class='badge badge-default pointer float-right ml-1 et'><i class="fa fa-chevron-down"></i></span>
 <span class='badge badge-default pointer float-right ct'><i class="fa fa-chevron-up"></i></span>
@@ -104,28 +104,28 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log info-bg">Info</span></td>
-        <td>8:34:56 am</td>
+        <td>6:47:03 pm</td>
         <td>
           Clicking on SignIn button
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log info-bg">Info</span></td>
-        <td>8:35:05 am</td>
+        <td>6:47:21 pm</td>
         <td>
           Verifying that the Login Page is opened or not
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log info-bg">Info</span></td>
-        <td>8:35:05 am</td>
+        <td>6:47:21 pm</td>
         <td>
           Entering the email id
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>8:35:05 am</td>
+        <td>6:47:21 pm</td>
         <td>
           <span class='badge white-text green'>Test Case: sampleMethodForEmailEntering Passed</span>
         </td>
@@ -149,13 +149,13 @@
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Started</p>
-<h3>Feb 14, 2025 08:34:52 am</h3>
+<h3>Feb 14, 2025 06:46:53 pm</h3>
 </div></div>
 </div>
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Ended</p>
-<h3>Feb 14, 2025 08:35:07 am</h3>
+<h3>Feb 14, 2025 06:47:22 pm</h3>
 </div></div>
 </div>
 <div class="col-md-3">
@@ -225,7 +225,7 @@
 </div></div>
 <script>
 var timeline = {
-"sampleMethodForEmailEntering":13.225
+"sampleMethodForEmailEntering":27.081
 };
 </script>
 <div class="row">
